--- a/Scrap_Flight_Data.ipynb
+++ b/Scrap_Flight_Data.ipynb
@@ -64,7 +64,7 @@
     "import mapping as city\n",
     "import pandas as pd\n",
     "from memory_profiler import memory_usage\n",
-    "base_url=\"http://developer.goibibo.com/api/search/?app_id=35410ad4&app_key=98a8f828b2424f21626533d71f106c25&format=json\"\n",
+    "base_url=\"http://developer.goibibo.com/api/search/?app_id=YOUR_API_ID&app_key=YOUR_API_KEY&format=json\"\n",
     "import os\n",
     "y=1\n",
     "p=0\n",
