--- a/hotels_data.ipynb
+++ b/hotels_data.ipynb
@@ -41,24 +41,12 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'JSON'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-adbffa7aa5a2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mJSON\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msimplejson\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmapping\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'JSON'"
-     ]
     }
    ],
    "source": [
     "import requests\n",
     "import json\n",
     "import time\n",
-    "import JSON\n",
     "import simplejson as j\n",
     "import mapping as city\n",
     "import city_list as li\n",
@@ -79,7 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_url=\"http://developer.goibibo.com/api/voyager/get_hotels_by_cityid/?app_id=cea84cbc&app_key=4d0cccfccddea1c882f50f238c0dda7a\"\n",
+    "base_url=\"http://developer.goibibo.com/api/voyager/get_hotels_by_cityid/?app_id=YOUR_API_KEY&app_key=YOUR_API_ID&format=json\"\n",
     "from ratelimit import limits, sleep_and_retry\n",
     "@sleep_and_retry\n",
     "@limits(calls=25, period=1)\n",
